# embrapa-dashboard-produtos-agricolas

./: .dockerignore  .env.example  .gcloudignore  .gitattributes  .gitignore  .pre-commit-config.yaml  0.26.0  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  IAM_SETUP.md  Makefile  README.md  ROADMAP.md  SECRET_MANAGER.md  SECURITY.md  SETUP.md  TESTING.md  TODO.md  extracted_eddcd148-1aef-4eae-953d-7bc2fa4f40f0.js  extracted_filter_menu.css  extracted_template.html  init_dev_env.sh  pyproject.toml  setup.bat  setup.ps1  setup.sh  setup_dev_env.py  setup_dev_env_enterprise.py  test.bat  test.sh  test_setup.py  verify_ci_blocks.py
.claude/: launch.json  settings.json  settings.local.json
.claude/skills/bigquery-debug/: SKILL.md
.claude/skills/code-audit/: SKILL.md
.claude/skills/dash-page-scaffold/: SKILL.md
.claude/skills/dbt-workflow/: SKILL.md
.claude/skills/deploy-cloud-run/: SKILL.md
.claude/skills/ingest-data/: SKILL.md
.claude/skills/lint-and-test/: SKILL.md
.claude/skills/new-chart-component/: SKILL.md
.claude/skills/run-dashboard/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dashboard-smoke.yml  dbt-build-prod.yml  dbt-source-freshness.yml  gitleaks.yml  reconcile-reminder.yml  release.yml
PLANS/: README.md  codebase_audit_2026-06-12.md  comex_flows.md  comtrade_flows.md  comtrade_flows_regimes_market.md  curadoria_catalogo.md  geo_subregions.md  quality_outliers_and_visibility_gate.md  raw_zone_architecture.md  react_migration_contract_map.md
dbt/: .sqlfluff  dbt_project.yml  profiles.yml.example
dbt/macros/: annual_deflation_ctes.sql  apply_dev_ttl.sql  data_quality_flag.sql  generate_schema_name.sql  hidden_code_predicate.sql  ibge_1985_cruzado_correction.sql  quality_outlier_ctes.sql  safe_numeric.sql  state_dimensions.sql
dbt/models/: _sources.yml
dbt/seeds/: _seeds.yml  comex_country.csv  comex_ncm.csv  comex_ncm_succession.csv  comex_unit.csv  comex_via.csv  commodity_crosswalk.csv  comtrade_country.csv  comtrade_hs.csv  comtrade_hs_succession.csv  comtrade_market_nature.csv  comtrade_unit.csv  extfx_cny_brl.csv  historical_currency_factors.csv  ibge_municipio_mesh.csv  ibge_product_codes.csv  product_unit_factors.csv  unit_family_conversions.csv
dbt/tests/: assert_1994_yearfx_rate_bounded.sql  assert_comex_no_gross_kg_unit.sql  assert_comex_single_stat_unit_per_ncm.sql  assert_currency_factor_no_overlap.sql  assert_family_base_unit_coherent.sql  assert_gold_has_rows.sql  assert_inflation_series_no_month_gaps.sql  assert_monetary_units_have_currency_factor.sql  assert_municipio_mesh_uf_consistent.sql  assert_pam_area_planted_ge_harvested.sql  assert_pam_conserved_silver_to_gold.sql  assert_pam_ppm_1985_value_not_cliffed.sql  assert_pam_pre1994_real_per_unit_bounded.sql  assert_pevs_conserved_silver_to_gold.sql  assert_ppm_conserved_silver_to_gold.sql  assert_pre1994_comtrade_brl_null.sql  assert_pre1994_real_per_unit_bounded.sql  assert_product_single_family.sql  assert_serving_conserved_gold.sql  assert_trade_value_conserved_silver_to_gold.sql  assert_unconvertible_quantities_for_curation.sql
deploy/: Dockerfile  README.md
deploy/dashboard/: Dockerfile  README.md  cloudbuild.yaml  deploy.sh
deploy/iam/: grant_least_privilege.sh
deploy/ingestion/: Dockerfile  README.md  alert.sh  alert_policy.json  cloudbuild.yaml  deploy.sh  schedule.sh  schedule_comtrade.sh  schedule_pam.sh  schedule_ppm.sh  schedule_reconcile.sh
deploy/webapi/: .env.prod.example  Dockerfile  README.md  cloudbuild.yaml  deploy.sh
design system/embrapa-commodities-design-system/: README.md
docs/: adding_a_data_source.md  architecture.md  auth.md  auth_architecture.md  comtrade_world_backfill.md  cost_safety.md  frontend_data_contract.md  gold_data_model.md  iam_setup.md  looker_studio_setup.md  migration_history.md  operations_runbook.md  ownership_transfer.md  setup.md  testing.md
docs/audits/: codebase_audit_2026-06-12.md  curadoria_pr_audit_2026-06-26.md  deep_audit_2026-06-24_v1.6.0.md  deep_audit_2026-06-24_v1.6.0_complete.md  deep_audit_2026-06-30.md  full_codebase_audit_2026-06-23.md  manual_scan_audit_2026-06-23.md  quality_audit_2026-06-22.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vitest.setup.js
frontend/src/: bootstrap-globals.js  main.jsx
scripts/: README.md  check_dashboard_size.py  dashboard-build.ps1  dashboard-deploy.ps1  dashboard-run.ps1  dashboard-setup-sa.ps1  dashboard-smoke.ps1  dashboard-visual.ps1  dashboard_smoke.py  dashboard_visual_check.py  dbt-with-env.sh  export_commodity_consolidated.py  export_commodity_inventory.py  grant-sa-iam-roles.ps1  refresh_cny_seed.py  refresh_comtrade_country_seed.py  refresh_ibge_municipio_mesh.py  setup-claude-code-web-sa.sh  setup_dev_env.py  test_setup.py
scripts/claude-hooks/: block-dangerous-commands.js  block-dangerous-commands.test.js  protect-secrets.js  protect-secrets.test.js
src/embrapa_commodities/: __init__.py  backup.py  cli.py  config.py  discover.py  doctor.py  monitor.py  observability.py
src/embrapa_dashboard/: __init__.py  backup.py  cli.py  config.py  doctor.py  observability.py
tests/: conftest.py  test_backup.py  test_bcb_client.py  test_bcb_currency_pipeline.py  test_bcb_inflation_pipeline.py  test_bcb_pipeline.py  test_bcb_series.py  test_catalog_resolver.py  test_cli.py  test_comex_client.py  test_comex_pipeline.py  test_comtrade_client.py  test_comtrade_pipeline.py  test_config.py  test_core_bronze.py  test_core_http.py  test_core_raw.py  test_cov_agrupamentos.py  test_cov_attr_eng.py  test_cov_bcb.py  test_cov_catalog_lifecycle.py  test_cov_cli.py  test_cov_comex.py  test_cov_commodity_groups.py  test_cov_comtrade.py  test_cov_config.py  test_cov_curation.py  test_cov_doctor.py  test_cov_feedback_research.py  test_cov_gateway.py  test_cov_ibge_client.py  test_cov_monitor_obs.py  test_cov_pipelines.py  test_cov_routes.py  test_cov_seam.py  test_cov_seam_curation.py  test_cov_serializers.py  test_cov_sql_cross.py  test_dashboard_errors.py  test_dashboard_smoke.py  (+23 more)
(+478 files in other folders)
