[project]
name = "embrapa-commodities"
version = "0.1.0"
description = "Pipeline Medalhão (IBGE-PEVS + BCB) → BigQuery → Looker Studio"
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "MIT" }
authors = [{ name = "Igor Florentino", email = "igorlopesc@gmail.com" }]
dependencies = [
    "google-cloud-bigquery>=3.25",
    "google-cloud-storage>=2.18",
    "google-auth>=2.34",
    "pandas>=2.2",
    "pyarrow>=17",
    "requests>=2.32",
    "tenacity>=9",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "dbt-core>=1.8",
    "dbt-bigquery>=1.8",
]

[project.optional-dependencies]
dashboard = [
    "dash>=2.17",
    "plotly>=5.22",
    "gunicorn>=22.0",
    "google-cloud-bigquery-storage>=2.25",
]
# Headless-browser visual checks (Tier 2). Kept out of `dashboard` so the
# Cloud Run runtime image stays lean — only needed for pre-release validation.
visual = [
    "playwright>=1.40",
]

[project.scripts]
embrapa = "embrapa_commodities.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/embrapa_commodities"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "responses>=0.25",
    "ruff>=0.6",
    "radon>=6",
    "sqlfluff>=3.1",
    "sqlfluff-templater-dbt>=3.1",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# RUF001/RUF002/RUF003 flag "ambiguous" Unicode (×, en-dash, NBSP).
# We use those intentionally for pt-BR typography per the design system.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    # Opt-in marker for tests that need live GCP credentials (BigQuery, GCS).
    # `make test` runs with `-m 'not smoke'` to keep the default test loop
    # fast and credential-free; `make test-smoke` runs with `-m smoke` and
    # HARD-FAILS if credentials are missing (no silent skips — see the 2026-05
    # audit action item #4 and tests/test_dashboard_smoke.py).
    "smoke: live-BigQuery dashboard smoke test; opt-in via `make test-smoke`",
]
