[project]
name = "embrapa-commodities"
version = "0.1.0"
description = "Medallion pipeline (IBGE-PEVS + BCB + COMEX + COMTRADE) → BigQuery → Looker Studio"
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "Apache-2.0" }
authors = [{ name = "Igor Florentino", email = "igorlopesc@gmail.com" }]
dependencies = [
    "google-cloud-bigquery>=3.25",
    "google-cloud-storage>=2.18",
    "google-auth>=2.34",
    "pandas>=2.2",
    "pyarrow>=17",
    "requests>=2.32",
    "certifi>=2024.2",
    "tenacity>=9",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "dbt-core>=1.8",
    "dbt-bigquery>=1.8",
]

[project.optional-dependencies]
# Dashboard data-access layer (src/embrapa_commodities/serving). Kept out of the
# core install so the ingestion CLI stays lean — `uv sync --extra serving` (or
# the Cloud Run image) pulls these. google-cloud-bigquery is already a core dep.
serving = [
    "flask>=3.0",
    "flask-caching>=2.3",
]
# REST layer (src/embrapa_commodities/webapi) for the React SPA — the dashboard's
# consumption path (replaced the Dash UI in the 2026-06 migration). Serves /api
# (over the `serving` BFF) + the built React SPA, via gunicorn. No dash/plotly:
# the analytical charts are client-side Plotly.js in the frontend (`frontend/`).
# `uv sync --extra webapi` (or the Cloud Run image, deploy/webapi/).
webapi = [
    "flask>=3.0",
    "flask-caching>=2.3",
    # Production WSGI server for the Cloud Run Service. Pure-Python wheel —
    # installs everywhere but only *runs* under Linux (fcntl), which is fine: it
    # is only invoked inside the Linux image.
    "gunicorn>=22",
]

[project.scripts]
embrapa = "embrapa_commodities.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/embrapa_commodities"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "responses>=0.25",
    "ruff>=0.6",
    "radon>=6",
    "sqlfluff>=3.1",
    "sqlfluff-templater-dbt>=3.1",
    "pre-commit>=3.7",
    # Serving-layer deps in dev too, so tests/test_serving.py runs in CI.
    "flask>=3.0",
    "flask-caching>=2.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# RUF001/RUF002/RUF003 flag "ambiguous" Unicode (×, en-dash, NBSP).
# We use those intentionally for pt-BR typography per the design system.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.mccabe]
# Cap cyclomatic complexity per function. The ingestion CLI commands used to
# bury the per-chunk loop + continue-on-failure inline (well over this); that
# logic now lives in each pipeline's run() and the shared chunked_run helper,
# so every function in src/ stays at or under 10. (C90 is opt-in per run:
# `uv run ruff check src/ --select C90`.)
max-complexity = 10

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
